[package]
name = "miden-integration-tests"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
cargo_metadata = "0.19"
cargo-util = "0.2"
env_logger.workspace = true
midenc-expect-test.workspace = true
filetime = "0.2.23"
glob = "0.3.1"
log.workspace = true
miden-assembly.workspace = true
miden-core.workspace = true
miden-mast-package.workspace = true
miden-processor.workspace = true
midenc-dialect-arith.workspace = true
midenc-dialect-hir.workspace = true
midenc-frontend-wasm.workspace = true
midenc-hir.workspace = true
midenc-hir-eval.workspace = true
midenc-codegen-masm.workspace = true
midenc-session.workspace = true
midenc-compile.workspace = true
midenc-debug.workspace = true
cargo-miden.workspace = true
wasmprinter = "0.227"
proptest.workspace = true
sha2 = "0.10"
walkdir = "2.5.0"

[dev-dependencies]
blake3 = "1.5"
concat-idents = "1.1"
miden-core.workspace = true
miden-objects = { workspace = true, features = ["std"] }

[package.metadata.cargo-machete]
ignored = ["blake3"]
