[package]
name = "cargo-miden"
description = "A cargo extension to build Miden projects"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
autotests = false                                         # disable autodiscovery of tests

[[bin]]
name = "cargo-miden"

[[test]]
name = "integration"
path = "tests/mod.rs"

[dependencies]
midenc-compile.workspace = true
midenc-session.workspace = true
env_logger.workspace = true
log.workspace = true
clap.workspace = true
anyhow.workspace = true
cargo_metadata = "0.19"
cargo-generate = "0.23"
path-absolutize = "3.1.1"
tokio.workspace = true
cargo-config2 = "0.1.24"
serde.workspace = true
toml.workspace = true
serde_json = "1.0"
miden-stdlib-sys = { version = "0.0.8", path = "../../sdk/stdlib-sys", features = [
    "wit",
] }
miden-base-sys = { version = "0.0.8", path = "../../sdk/base-sys", features = [
    "wit",
] }
miden-base = { version = "0.0.8", path = "../../sdk/base", features = ["wit"] }

# from cargo-component
semver.workspace = true
wasmparser.workspace = true
wit-bindgen-core = "0.41.0"
wit-bindgen-rust = "0.41.0"
wit-component = "0.227.0"
wit-parser = "0.227.0"
wasm-pkg-client = "0.9.0"
wasm-metadata = "0.227.0"
tempfile = "3.10.1"
shell-escape = "0.1.5"
dirs = "5"
which = "6.0.1"
wasi-preview1-component-adapter-provider = "29.0.1"
indexmap = "2.7"
heck = "0.5.0"
owo-colors = "4.0.0"
parse_arg = "0.1.6"
toml_edit = { version = "0.22.9", features = ["serde"] }
libc = "0.2.153"
unicode-width = "0.2.0"
# git2 = { version = "0.20.1", default-features = false }
url = { version = "2.5.0", features = ["serde"] }
tokio-util = "0.7.10"
futures = "0.3.30"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Console",
]

[dev-dependencies]
miden-mast-package.workspace = true
