cargo-features = ["trim-paths"]

[package]
name = "cross-ctx-account"
version = "0.1.0"
edition = "2021"

[lib]
# Build this crate as a self-contained, C-style dynamic library
# This is required to emit the proper Wasm module type
crate-type = ["cdylib"]

[dependencies]
# Miden SDK consists of a stdlib (intrinsic functions for VM ops, stdlib functions and types)
# and transaction kernel API for the Miden rollup
miden = { path = "../../../../sdk/sdk" }
wit-bindgen-rt = "0.28"


[profile.release]
# optimize the output for size
opt-level = "z"
# Explicitly disable panic infrastructure on Wasm, as
# there is no proper support for them anyway, and it
# ensures that panics do not pull in a bunch of standard
# library code unintentionally
panic = "abort"
trim-paths = ["diagnostics", "object"]

[profile.dev]
# Explicitly disable panic infrastructure on Wasm, as
# there is no proper support for them anyway, and it
# ensures that panics do not pull in a bunch of standard
# library code unintentionally
panic = "abort"
opt-level = 1
debug-assertions = true
overflow-checks = false
debug = true
trim-paths = ["diagnostics", "object"]

[package.metadata.miden]
supported-types = ["RegularAccountUpdatableCode"]

# TODO: switch to miden table
[package.metadata.component]
package = "miden:cross-ctx-account"

[package.metadata.component.target.dependencies]
"miden:base" = { path = "../../../../sdk/base/wit/miden.wit" }
"miden:core-intrinsics" = { path = "../../../../sdk/stdlib-sys/wit/miden-core-intrinsics.wit" }
"miden:core-stdlib" = { path = "../../../../sdk/stdlib-sys/wit/miden-core-stdlib.wit" }
"miden:core-base" = { path = "../../../../sdk/base-sys/wit/miden-core-base.wit" }

[package.metadata.cargo-machete]
ignored = ["wit-bindgen-rt"]
